src/styles/settings.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.container {
  width: 800px;
  margin: 20px 15px auto;
  padding: 0;
  color: #505050!important;
  float: left;
}

.list {
  width: 800px;
  margin-bottom: 80px;
  padding: 0;
  list-style: none;
  float: left;
}

.list li {
  height: 40px;
}

.list li #nag-nanny:checked ~ div {
  display: block;
}

.list li #pomodoro-mode:checked ~ div {
  display: block;
}

.list li label {
  font-size: 14px;
}

.list li input[type="checkbox"]{
  height: 1.3em;
  width: 1.3em;
  margin: 0px 0.4em 0.3em 0px;
}

#subsettings-details  {
  display: none;
  margin-left: 10px;
}

#subsettings-details p {
  float: left;
  padding-right: 30px;
}

#subsettings-details p:last-child {
  float: none;
  clear: both;
}

#subsettings-details span {
  display: block;
  font-size: 14px;
  padding-top: 10px;
}

.footer {
  padding: 10px 15px;
  min-width: 800px;
  background-color: #f5f5f5;
  border-top: 1px solid #e5e5e5;
  font-size: 12px;
  color: #8A8888;
  float: left;
}

.changelog {
  margin-bottom: 5px;
}

#version a {
  color: #8A8888!important;
  text-decoration: none;
}

